<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jiyiren.jysort.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.ToolBar.ZhiHu">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/time_tip"/>
    <TextView
        android:id="@+id/timeshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:layout_gravity="center_horizontal"
        android:text="@string/time_default"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="2dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:id="@+id/ll_sortpart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            ></LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TextTimeComplexStyle_Name"
                android:text="@string/best_time"/>
            <TextView
                style="@style/TextTimeComplexStyle_Name"
                android:text="@string/average_time"/>
            <TextView
                style="@style/TextTimeComplexStyle_Name"
                android:text="@string/worst_time"/>
            <TextView
                style="@style/TextTimeComplexStyle_Name"
                android:text="@string/extra_space"/>
            <TextView
                style="@style/TextTimeComplexStyle_Name"
                android:text="@string/stability"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_best_time"
                style="@style/TextTimeComplexStyle_Value"
                android:text="@string/default_best_time"/>
            <TextView
                android:id="@+id/tv_average_time"
                style="@style/TextTimeComplexStyle_Value"
                android:text="@string/default_average_time"/>
            <TextView
                android:id="@+id/tv_worst_time"
                style="@style/TextTimeComplexStyle_Value"
                android:text="@string/default_worst_time"/>
            <TextView
                android:id="@+id/tv_extra_space"
                style="@style/TextTimeComplexStyle_Value"
                android:text="@string/default_extra_space"/>
            <TextView
                android:id="@+id/tv_stability"
                style="@style/TextTimeComplexStyle_Value"
                android:text="@string/default_stability"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
